force-app/main/default/objects/API_Setup__mdt/API_Setup__mdt.object-meta.xml
<CustomObject>
    <label>API Setup</label>
    <pluralLabel>APIs Setup</pluralLabel>
</CustomObject>