force-app/main/default/objects/API_Setup__mdt/fields/body_request__c.field-meta.xml
<CustomField>
    <fullName>body_request__c</fullName>
    <label>body_request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>