force-app/main/default/objects/API_Setup__mdt/fields/end_method__c.field-meta.xml
<CustomField>
    <fullName>end_method__c</fullName>
    <label>end_method</label>
    <length>1</length>
    <type>Text</type>
</CustomField>