force-app/main/default/objects/API_Setup__mdt/fields/error_mesage_tag__c.field-meta.xml
<CustomField>
    <fullName>error_mesage_tag__c</fullName>
    <label>error_mesage_tag</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>