force-app/main/default/objects/API_Setup__mdt/fields/header_request__c.field-meta.xml
<CustomField>
    <fullName>header_request__c</fullName>
    <label>header_request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>