force-app/main/default/objects/API_Setup__mdt/fields/http_success_response_code__c.field-meta.xml
<CustomField>
    <fullName>http_success_response_code__c</fullName>
    <label>http_success_response_code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>