force-app/main/default/objects/API_Setup__mdt/fields/inactive_return_message__c.field-meta.xml
<CustomField>
    <fullName>inactive_return_message__c</fullName>
    <label>inactive_return_message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>