force-app/main/default/objects/API_Setup__mdt/fields/isHttpStatusCheck__c.field-meta.xml
<CustomField>
    <fullName>isHttpStatusCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is Check http_success_response_code</description>
    <label>isHttpStatusCheck</label>
    <type>Checkbox</type>
</CustomField>