force-app/main/default/objects/API_Setup__mdt/fields/isSuccessCodeCheck__c.field-meta.xml
<CustomField>
    <fullName>isSuccessCodeCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSuccessCodeCheck</label>
    <type>Checkbox</type>
</CustomField>