force-app/main/default/objects/API_Setup__mdt/fields/method__c.field-meta.xml
<CustomField>
    <fullName>method__c</fullName>
    <label>method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>