force-app/main/default/objects/API_Setup__mdt/fields/NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential__c</fullName>
    <label>NamedCredential</label>
    <length>250</length>
    <type>Text</type>
</CustomField>