force-app/main/default/objects/API_Setup__mdt/fields/request_appid__c.field-meta.xml
<CustomField>
    <fullName>request_appid__c</fullName>
    <label>request_appid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>