force-app/main/default/objects/API_Setup__mdt/fields/start_method__c.field-meta.xml
<CustomField>
    <fullName>start_method__c</fullName>
    <label>start_method</label>
    <length>1</length>
    <type>Text</type>
</CustomField>