force-app/main/default/objects/API_Setup__mdt/fields/timeout__c.field-meta.xml
<CustomField>
    <fullName>timeout__c</fullName>
    <description>timeout api milisecond</description>
    <label>timeout</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>